# exo-genesis

./: .gitignore  .graphifyignore  AGENTS.md  CONTEXT.md  SPEC.md  check_frontend.py  check_frontend2.py  check_frontend3.py  check_frontend4.py  check_frontend_url.py  skills-lock.json
.opencode/skills/all-skills-this-project/: SKILL.md
backend/: .env.example  pyproject.toml  requirements.txt  test_flow.py  test_flow2.py  test_full_flow.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py
backend/app/models/: element.py  expedition.py  lab.py  ship.py  user.py
backend/app/routers/: auth.py  content.py  debug.py  events.py  expeditions.py  guide.py  health.py  lab.py  shop.py  system.py  user.py  user_ships.py
backend/app/services/: artifact_resolver.py  auth.py  box_opener.py  content_loader.py  expedition_logic.py  notifier.py  progression.py  recipe_generator.py  supabase.py  telegram.py  user_activity.py
backend/bot/: handlers.py  webhook.py
backend/content/: artifacts.json  boxes.json  elements.json  guide.json  ranks.json  resources.json  ships.json  shop.json  zones.json
backend/supabase/migrations/: 00001_initial_schema.sql  00002_fix_schema.sql  00003_experiment_log.sql  00004_guide.sql  00005_cleanup_user_754269918.sql  00006_cleanup_legacy.sql  00007_achievements.sql  00008_relax_stability_constraint.sql
backend/tests/: test_boxes_integrity.py  test_calculate_zone_stats.py  test_health.py
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
(+39 files in other folders)
