[project]
name = "exo-genesis-backend"
version = "0.1.0"
description = "Backend for EXO-GENESIS Telegram Mini App"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "supabase>=2.5.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=22.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[dependency-groups]
test = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
